# CashCare

./: README.md  package-lock.json  package.json
CashCare/: #NetworkSniffer.qml  CMakeLists.txt  DashboardPage.qml  Dockerfile  FirewallRulesetPage.qml  LogPage.qml  Login.qml  Main.qml  Navbar.qml  NetworkSnifferPage.qml  PacketDetailsWindow.qml  Sidebar.qml  Statusbar.qml  main.cpp  ml_predict.py  networksniffer.cpp  networksniffer.h  networkutils.cpp  networkutils.h  packetparser.cpp  packetparser.h  resources.qrc
Server/: server.py
Website/: .gitignore  package-lock.json
Website/app/Sections/: Pricing.js
Website/backend/: .env  index.js  package-lock.json  package.json
Website/backend/api/: login.js  logout.js  signup.js  update-user.js  user.js  username.js
Website/frontend/: aln.js  package-lock.json  package.json
Website/frontend/app/: globals.css
Website/frontend/app/Components/: Header.js  Header1.js
Website/frontend/app/Dashboard/: PrivateRoute.js  page.js
Website/frontend/app/Forgotpassword/: page.js
Website/frontend/app/Login/: page.js
Website/frontend/app/Pricing/: page.js
Website/frontend/app/Sections/: Herosec.js  Pricing.js  Whycashcare.js
Website/frontend/app/Settings/: page.js
Website/frontend/app/Signup/: page.js
Website/frontend/app/pages/: Signup.jsx
Website/frontend/app/utils/: auth.js
app/: globals.css  page.js
app/Components/: Footer.js  Header.js
app/Login/: page.js
app/Pages/: LOGIN.js  Signup.jsx
app/Sections/: Herosec.js
models/credit_card/: synthetic_fraud.pcap
models/online_payment/: online_fraud_detect_model.pkl  online_predict.py  synthetic_transactions.pcap
